[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oom_messages_exporter"
version = "20230918"
dependencies = [
    "prometheus_client>=0.17.1"
]

authors = [
  { name="Alexey Antropov", email="alexeyantropov@gmail.com" },
]
description = "Collects OOM Killer messages from /var/log/messages and represents the data for Prometheus."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/alexeyantropov/oom_messages_exporter"
"Bug Tracker" = "https://github.com/alexeyantropov/oom_messages_exporter/issues"
